# greennode-vks-intelligence-prod

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUILD.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  scheduled-reports.yml
docker/: .env.example  README.md  docker-compose.yml
docs/: .gitignore  ARCHITECTURE-VISUAL.html  ARCHITECTURE.md  SOURCES.md
memory/: AGENT-MEMORY.md  README.md
memory/pricing/: README.md  (+18 more)
n8n/: README.md  battlecard-automation.json  daily-competitor-monitor.json  daily-intelligence-production.json  memory-maintenance.json  qa-telegram.json  weekly-digest-production.json
prompts/: README.md  _orchestrator.md  _output_policy.md  _report_templates.md  _social_sources.md  battlecard_agent.md  competitor_agent.md  daily_intelligence_agent.md  market_trend_agent.md  memory_curator_agent.md  positioning_agent.md  pricing_agent.md  qa_agent.md  quality_critic_agent.md  regulatory_agent.md
scripts/: create-runtime.ps1  deploy.ps1  refresh-vcr-credentials.ps1  runtime-status.ps1
tests/: test_battlecard_persist.py  test_blog_crawler.py  test_dashboard_chat.py  test_dashboard_qa.py  test_eval_harness.py  test_evidence_tool.py  test_memory_writer.py  test_news_tool_links.py  test_orchestrator.py  test_performance_optimizer.py  test_prompt_loading.py  test_qa_intent.py  test_quality_sources.py  test_revise_loop.py  test_runtime_budget_dashboard.py  test_scheduler.py  test_smoke.py  test_synthesis_daily.py  test_task_state_store.py  test_telegram_formatting.py  test_telegram_tool.py
(+145 files in other folders)
