[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vks-intelligence"
version = "0.1.0"
description = "Production multi-agent runtime cho GreenNode VKS Intelligence trên AgentBase (Vietnamese-first)"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "greennode-agentbase>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.2",
    "anthropic>=0.50.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv>=1.0.0",
    "tenacity==9.0.0",
    "GitPython==3.1.43",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "feedparser==6.0.11",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
vks-intelligence = "vks_intelligence.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vks_intelligence = ["evals/*.json", "static/*.html"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".claude",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
